# calculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h  main.c
app/: Main_Window.py  config.py  core.py  main.py
app/apps/: app_base.py  app_manager.py
app/apps/calculator/: Application.py
app/apps/editor/: Application.py
app/apps/geo_coord/: Application.py
app/apps/settings/: Application.py
app/apps/terminal/: Application.py
app/drivers/: manager.py  unix.py
app/pages/: Main_Window.py
app/utilities/: lvgl_debug.py  lvgl_events.py  lvgl_fonts.py  lvgl_images.py  lvgl_styles.py
app/widgets/: main_footer.py  main_header.py  main_menu.py
data/: font_list.json  image_list.json  options.big-unix.json  options.unix.json  style_config.json
demos/: advanced_demo.py  custom_widget_example.py  example_3.py  image_demo.py
django/: requirements.txt
django/calculator/: settings.py  urls.py
django/coord_convert/: apps.py  urls.py  views.py
django/coord_convert/converters/: geographic.py
django/coord_convert/templates/coord_convert/: geo_panel.html  main.html  master.html
django/polls/: admin.py  models.py  urls.py  views.py
django/polls/migrations/: 0001_initial.py
django/scripts/: setup-django.sh
docs/: LVGL_Notes.md
scripts/: build.sh  create-venv.sh  run_unix.sh
src/: main.cpp
src/picocalc/: lv_port_disp_picocalc_ILI9488.c
src/resources/images/: logo_235_65.hpp
templates/: version.hpp.in
tools/: app_tools.py
